--- a/src/files/assets/third/jqgrid/css/ui.jqgrid.css
+++ b/src/files/assets/third/jqgrid/css/ui.jqgrid.css
@@ -41,7 +41,7 @@ tr.ui-search-toolbar select {margin: 1px 0 0 0}
 .ui-jqgrid tr.jqgfirstrow td {padding: 0 2px 0 2px;border-right-width: 1px; border-right-style: solid;}
 .ui-jqgrid tr.jqgroup td {font-weight: normal; overflow: hidden; white-space: pre; height: 22px;padding: 0 2px 0 2px;border-bottom-width: 1px; border-bottom-color: inherit; border-bottom-style: solid;}
 .ui-jqgrid tr.jqfoot td {font-weight: bold; overflow: hidden; white-space: pre; height: 22px;padding: 0 2px 0 2px;border-bottom-width: 1px; border-bottom-color: inherit; border-bottom-style: solid;}
-.ui-jqgrid tr.ui-row-ltr td {text-align:left;border-left: none; border-right: none; border-bottom: 1px solid #dddddd;}
+.ui-jqgrid tr.ui-row-ltr td {text-align:left;border-left: none; border-right: none; border-bottom: 1px solid #dddddd; white-space: nowrap;}
 .ui-jqgrid tr.ui-row-rtl td {text-align:right;border-left: none; border-right: none;}
 .ui-jqgrid td.jqgrid-rownum { padding: 0 2px 0 2px; margin: 0; border: 0 none;}
 .ui-jqgrid .ui-jqgrid-resize-mark { width:2px; left:0; background-color:#777; cursor: e-resize; cursor: col-resize; position:absolute; top:0; height:100px; overflow:hidden; display:none; border:0 none; z-index: 99999;}
